--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -1,4 +1,4 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
+spring.flyway.baseline-on-migrate=true
+flyway.user=postgres
+flyway.password=mysecretpassword
