--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.16'
     runtimeOnly 'org.postgresql:postgresql'
     compile "org.flywaydb:flyway-core:7.7.1"
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 }
 flyway {
     url = 'jdbc:postgresql://localhost:5432/postgres'
