--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://ec2-3-230-61-252.compute-1.amazonaws.com:5432/dca2pk034v7sgs?sslmode=require
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.removeAbandoned=true
 spring.datasource.platform=postgres
 spring.datasource.username=ylvzetyzezootx
