--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,5 +1,4 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://ec2-3-230-61-252.compute-1.amazonaws.com:5432/dca2pk034v7sgs?sslmode=require
 spring.datasource.driverClassName=org.postgresql.Driver
