--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ dependencies {
     implementation group: 'com.fasterxml.uuid', name: 'java-uuid-generator', version: '3.1.0'
     implementation 'org.projectlombok:lombok:1.18.16'
     runtimeOnly 'org.postgresql:postgresql'
-    compile "org.flywaydb:flyway-core:7.7.1"
+    runtimeOnly group: 'org.flywaydb', name: 'flyway-gradle-plugin', version: '7.15.0'
 }
-flyway {
+    flyway {
     url = 'jdbc:postgresql://ec2-3-230-61-252.compute-1.amazonaws.com:5432/dca2pk034v7sgs'
     user = 'ylvzetyzezootx'
     password = 'df46515cb9c3b4b09d5120d95b9290ae8f849dab1843f8567a1199a194c9957d'
