--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23.jre7'
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     implementation group: 'com.fasterxml.uuid', name: 'java-uuid-generator', version: '3.1.0'
-    implementation 'org.projectlombok:lombok:1.18.16'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.projectlombok:lombok:1.18.20'
+    runtimeOnly 'org.postgresql:postgresql:42.2.23.jre7'
     runtimeOnly group: 'org.flywaydb', name: 'flyway-gradle-plugin', version: '7.15.0'
 }
     flyway {
